# NetPort-Configurator

./: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
src/: main.js  modificacion.cjs  styles.css
src-ps1/: changa_vlan.ps1  change_conf_dhcp.ps1  change_conf_dhcp6.ps1  change_conf_port.ps1  change_conf_port_ipv6.ps1  change_vlan_test.ps1  get_network_info.ps1  get_network_info_ipv6.ps1  shortcut.ps1
src-tauri/: 2  Cargo.toml  build.rs  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.rar
src-tauri/src/: lib.rs  main.rs
src/test/: conf_port.js  main_test.js  record.html
src/views/: _layout.html  about.html  change_port.html  conf_Ipv4.html  conf_Ipv6.html  home.html  index.html
src/views/Conf_Ipv4/: config.js  index.html
src/views/Conf_Ipv6/: config.js  index.html
src/views/ConnectionProfiles/: index.html
src/views/home/: about.html
src/views/shared/: _layout.html  main.js
src/views/styles/: styles.css
